# ethome

./: .coverage  .coveragerc  .gitattributes  .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  codemeta.json  index.html  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_all.txt  setup.cfg  sitemap.xml
.github/workflows/: workflow.yml
api-docs/: index.html
api-docs/config/: index.html
api-docs/dl/: index.html
api-docs/dl.dl_features/: index.html
api-docs/dl.dl_generators/: index.html
api-docs/dl.feature_engineering/: index.html
api-docs/dl.grid_searches/: index.html
api-docs/features/: index.html
api-docs/features.cnn1d/: index.html
api-docs/features.dl_features/: index.html
api-docs/features.generic_features/: index.html
api-docs/features.mars_features/: index.html
api-docs/generic_features/: index.html~dev
api-docs/interpolation/: index.html
api-docs/io/: index.html
api-docs/mars_features/: index.html
api-docs/ml/: index.html
api-docs/models/: index.html
api-docs/plot/: index.html
api-docs/unsupervised/: index.html
api-docs/utils/: index.html
api-docs/version/: index.html
api-docs/video/: index.html
api-docs_backup/: index.html
api-docs_backup/config/: index.html
api-docs_backup/dl/: index.html
api-docs_backup/dl.dl_features/: index.html
api-docs_backup/dl.dl_generators/: index.html
api-docs_backup/dl.dl_models/: index.html
api-docs_backup/dl.feature_engineering/: index.html
api-docs_backup/dl.grid_searches/: index.html
api-docs_backup/features/: index.html
api-docs_backup/features.cnn1d/: index.html
api-docs_backup/features.dl_features/: index.html
api-docs_backup/features.features/: index.html
api-docs_backup/features.generic_features/: index.html
api-docs_backup/features.mars_features/: index.html
api-docs_backup/generic_features/: index.html
api-docs_backup/interpolation/: index.html
behaveml/: __init__.py  features.py  generic_features.py  interpolation.py  io.py  mars_features.py  models.py  plot.py  unsupervised.py  utils.py  video.py
conda/: ethome-conda.yaml
docs/: how-to.md  index.md
ethome/: __init__.py  config.py  features.py  interpolation.py  io.py  mars_features.py  models.py  plot.py  unsupervised.py  utils.py  video.py
examples/: improving_filtering.ipynb  sample_workflow.ipynb  sample_workflow.py  sample_workflow_nwb.ipynb  sample_workflow_sleap.ipynb  unsupervised_learning_demo.ipynb
how-to/: index.html
lib/: io.py  ml.py  video.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/: example_analysis.py
tests/: conftest.py  test_analysis.py  test_io.py  test_models.py  test_plot.py  test_unsupervised.py  test_utils.py
(+143 files in other folders)
