[metadata]
name = behaveml
version = attr:behaveml.__version__
author = Ben Lansdell
author_email = ben.lansdell@gmail.com
description = Machine learning for animal behavior analysis 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benlansdell/behaveml
project_urls =
    Bug Tracker = https://github.com/benlansdell/behaveml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    scikit-learn
    tqdm
    typeguard
    typing
    matplotlib
    scikit-image
    umap-learn
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir = 
    = .

[options.packages.find]
where = .

[options.extras_require]
all = 
    tensorflow == 2.4.1
    keras == 2.4.3
    #ssm@git+https://git@github.com/lindermanlab/ssm@a27c0d47837#egg=ssm