[metadata]
name = ethome-ml
version = attr:ethome.__version__
author = Ben Lansdell
author_email = ben.lansdell@gmail.com
description = Tools for machine learning of animal behavior.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benlansdell/ethome
project_urls =
    Bug Tracker = https://github.com/benlansdell/ethome/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    scikit-learn
    tqdm
    typeguard
    typing
    matplotlib
    scikit-image
    umap-learn
    dill
    pynwb
    ipywidgets
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
